--- a/Nietzsche/nietzsche_tardio.org
+++ b/Nietzsche/nietzsche_tardio.org
@@ -769,3 +769,490 @@ deseables y buenos loes estado opuestos, el debilitamiento, la
 culpabilización, el desprecio y la negación de uno mismo, la
 humanidad, etc.\\
 
+En primer lugar se considera que sin la utilización del miedo, de la
+intimidación y de la crueldad, del sufrimiento en vistas a imponer una
+estandarización entre los individuos y una regularidad a sus acciones,
+no se grabarían en lo más profundo de ellos las normas y los valores
+de la civilización.\\
+Sin el sufrimiento permanente no se fijan para toda la vida esos
+valores, la distinción entre lo promedio y lo prohibido por la
+sociedad, entre el bien y el mal.\\
+
+Ser educado, civilizarse, hacerse humano y moral en la cultura
+occidental ha sido el resultado de un ejercicio sobre los individuos
+de la crueldad en virtud del cual han incorporado las reacciones
+instintivas de inclinación hacia lo bueno, lo debido, y de rechazo
+hacia lo malo, lo prohibido. Reacciones instintivas que se ponen en
+funcionamiento al margen de la voluntad y del conocimiento
+consciente. Se las ha creado así un estatuto moral que les hace
+responsables, obligados a responder de sus comportamientos.\\
+El castigo, el sufrimiento que se inflige al autor de una falta es el
+modeo concreto de obligarle a que recupere la memoria de lo que se
+debí y no se debía hacer.\\
+
+El afecto de la crueldad caracteriza: (/i/) al proceso de aprendizaje
+de la obediencia a la moral, (/ii/) al proceso de su transmisión y al
+mantenimiento de su vigencia, (/iii/) al comportamiento moral mismo de
+los individuos así moralizados.\\
+
+En conclusión, el *europeo actual* es el resultado de una larga
+evolución impulsada y dirigida por un entrenamiento civilizado
+determinado, y de manera más específica moralizador, que la sociedad
+ha impuesto a os individuos.\\
+En todas las sociedades, el acceso a la cultura y la superación de la
+animalidad consiste en dar forma al caos de los impulsos vitales del
+individuo. Ninguna civilización humana es una pura continuidad con la
+naturaleza.\\
+La cultura, i.e. la reordenación de los dispositivos pulsionales de
+los individuos y de sus instintos en función de una voluntad
+coercitiva externa, es consustancial al individuo humano que vive en
+sociedad.\\
+Sin embargo hay distintas formas de hacer esto. Nietzsche acusa a la
+moral europea de haber identificado la moralización con una mala
+desnaturalización, en cuyo núcleo está la mala consciencia.\\
+Los instintos que se descargaban hacia fuera se vuelven ahora hacia
+dentro. El ser humano se sumerge en un proceso de interiorización en
+el que empieza a sufrir de sí mismo.
+
+Que la cultura y naturaleza sean cosas ditintas no quiere decir que
+sean inconciliables. La moral occidental las ha contrapuesto
+drásticamente con su prejuicio dualista metafísico, que separa de modo
+radical naturaleza y espíritu, cuerpo y alma. Así ha concebido al ser
+humano como sólo espíritu, alma y razón, y en modo alguno como un ser
+natural. Al haberse obligado a desnaturalizarse, se ha hecho de los
+individuos seres sin arraigo, sin la regulación espontánea y natural
+de instintos sanos y, en consecuencia, seres desorientados,
+angustiados y dominados por el deseo de dejar de ser para fundirse y
+desaparecer en el rebaño.\\
+
+Por otro lado, los fenómenos morales son remitidos a su origen en los
+sentimientos morales. Estos a su vez, son entendidos como la expresión
+dela actividad valorativa y axiológica (:teoría de valores) básica de
+la voluntad de poder.\\
+El bien de una moral determinada expresaría aquellas condiciones de
+vida que los hombres que profesan esa moral estiman adecuadas y
+necesarias para su supervivencia y crecimiento, mientras que el mal
+designaría aquello que debe ser evitado y excluido. Por tanto, sería
+la expresión de un sentimiento de impotencia.\\
+
+El ser humano es esencialmente un animal que evalúa, que percibe y
+valora, en el nivel básico y elemental de su actividad
+fisiopsicológica, qué es lo que puede asimilar y dominar para
+sobrevivir y crecer, que qué es lo que puede ser para él una amenaza,
+un daño y un peligro.\\
+
+El sentimiento del miedo, pues, no es un instinto en sí, sipo que es
+fruto de la percepción o evaluación de un peligro, de un posible daño
+para la supervivencia, para el crecimiento y la expansión del propio
+ser. A esta actividad básica de evaluación fisiopsicológica la llama
+voluntad de poder, i.e., voluntad de sobrevivir y de aumentar la
+propia potencia y fuerza de ser.\\
+Así, en la lucha de esta voluntad de poder por acrecentar su potencia
+de ser, el miedo es el sentimiento que procede de la percepción de una
+fuerza evaluada como superior a la propia y, por tanto, como una
+amenaza potencial susceptible de vencer y frustrar el impuslo de vida
+y de poder.\\
+
+La moral es una interpretación de la realidad engendrada por un ser
+viviente, por una cierta configuración de impulsos que, poniendo
+valores, expresa sus condiciones de vida que permiten asegurar el
+acrecentamiento de su poder.\\
+Para determinar la relación entre impulsos y valores hay que fijarse
+en esa condición de los impulsos o instintos de ser productores,
+creadores de valoraciones e interpretaciones. Es de aquí de donde
+N. deriva la crítica a la moral y sus posiciones alternativas: Cuando
+hablamos de valores lo hacemos bajo la inspiración, bajo la óptica de
+la vida misma. La vida misma nos obliga a poner valores, valora a
+través de nosotros cuando ponemos valores. Así, aquella
+contranaturaleza en cuanto moral que entiende a Dios como
+contraconcepto y como condena de la vida, no es más que un juicio de
+valor de la vida. De una vida descendente, debilitada, cansada,
+condenada.\\
+
+Los valores no son esencias inmutables y suprasensibles, no hay una
+objetividad inteligible de los valores en sí, como existentes en un
+mundo metafísico.\\
+Lo que hay son valoraciones /in situ/, estimaciones de valor en cuanto
+producción de estas valoraciones, procesualidad continua de esta
+actividad. La única realidad de los valores es el ejercicio mismo de
+la valoración, el proceso de apreciación interpretativa propia de un
+ser vivo en su actividad constante de dar forma a su universo a partir
+de preferencias que brotan de su sistema pulsional.
+
+En suma, lo pulsional es genealógicamente originaria porque es
+evaluante. Es actividad, no pasividad entendida como simple reacción
+al medio (Darwin). La pulsionalidad es espontaneidad que juzga,
+aprecia, estima prefiere y distingue, y no simplemente
+reacciona. Estas preferencias y rechazos pulsionales son mucho más
+profundos y determinantes que los juicios morales conscientes y
+reflexivos.
+
+* Moral de los señores y moral de los esclavos
+En /la geneología de la moral/ esboza la historia de la moral europea
+como genealogía que sa han constituido los dispositivos pulsionales
+que rigen los sentimientos morales. En esta historia ve dos procesos
+de fijación de valores distintos y en lucha continua, que dan lugar a
+dos tipos diferentes de moral.\\
+Uno de estos procesos se establece como valor prioritario el valor
+/bueno/, mientras que el valor /malo/ queda como secundario o
+accesorio. En el otro proceso, la prioridad la tiene el valor /malo/.\\
+
+La primera de esta morales la llama *moral de los señores*, propia de
+las antiguas aristocracias y de la nobleza como clase social. El valor
+bueno tiene un sentido de apto, de bien dotado naturalmente, de
+fuerte. Es decir, /bueno/ no tiene en esta valoración un significado
+ni moral ni moralizante propiamente.\\
+El valor /malo/ designa al hombre no apto, no capacitado, ordinario y
+común, hombre vulgar, que no es fuerte, ni excelente, que no ha
+desarrollado una inteligencia i una sensibilidad no una excelencia
+destacadas. Tiene connotaciones que lo vuelven objeto de cierto
+desprecio por parte de los nobles que, por su disciplina de vida,
+están por encima, y por eso son nobles y ricos.\\
+
+La característica básica del individuo aristocrático es el pathos de
+la distancia respecto de la masa de los individuos vulgares. No hay un
+sentimiento de hostilidad sino sólo de diferencia.\\
+Este pathos de la distancia es la expresión de una apreciación básica
+de la voluntad de poder es el que establece espontáneamente la
+jerarquía en cuanto diferencia fundamental entre buenos y malos. El
+valor bueno surge en esta moral a partir de esta espontaneidad de la
+voluntad de poder ascendente y activa.\\
+
+La *moral de los esclavos* tiene otra historia y su tabla de valores
+no se establece espontáneamente. Se construye progresivamente a partir
+de la confrontación entre una nobleza en guerra activa y los grupos a
+los que se opone imponiéndoles su denominación.\\
+Por ejemplo, los grupos religiosos cristianos formados por esclavos ,
+en los que la impotencia generó el odio y el deseo de venganza.\\
+La interiorización de éste odio y de esta impotencia se habría
+cristalizado como resentimiento de l que habría nacido la moral
+ascética, con la que se ha llevado a cabo durante siglos una auténtica
+guerra de aniquilación contra la moral de los señores.\\
+La debilidad de los resentidos se convirtió en astucia, encontrando el
+modo de vencer a los señores mediante la inversión de valores
+aristocráticos.\\
+Según N. el cristianismo se limitó a implementar, generalizándola, la
+formula crada por los judíos durante su cautividad en Babilonia y
+Egipto.\\
+
+Así, lo que diferencia a estos dos tipos de moral es su origen o
+precedencia a partir de configuraciones pulsionales distintas que a lo
+largo de la historia y en condiciones de civilización y de sociedad
+diferentes, han dado lugar a cristalizaciones de valores y de
+sentimientos morales contrapuestos.\\
+No es su verdad o falsedad, ni su bondad o maldad lo que
+originariamente las distingue. No es que la moral de los señores sea
+la buena y la veradera, y la moral de los esclavos la mala y la falsa,
+sino que lo las separa es un criterio distinto: el de la salud y la
+enfermedad y el de su capacidad de promover el crecimiento y
+potenciación de la vida del individuo, o por el contrario, su
+disminución y debilitamiento.\\
+
+Para N. el conflicto pulsional básico, propio de la vida humana, es el
+de la lucha entre un impulso a elevarse, diferenciarse, a adquirir una
+forma y una individualidad —lo apolíneo—, frente al impulso que empuja
+la fusión con los otros, a la disolución de uno mismo en el todo
+identificándose con la totalidad indiferenciada y quedando absorbida
+por ella —lo dionisíaco.\\
+De la diferencia de estos dos impulsos se deriva que es la vida misma
+la que hace que el individuo tienda a la autoafirmación, a la
+autonomía, y que incorpore de este modo la elección, el límite, la
+renuncia, la prohibición y la responsabilidad emergiendo de su
+indiferenciación, de su ignorancia y de su minorías de edad.\\
+
+Sería pues, la vida misma la que tiene ya de manera connatural, en su
+dinamismo, un amoral de la autosuperación que es sustancialmente una
+moral del equilibrio, de la autolimitación, de la autodisciplina y el
+autocontrol.\\
+
+
+Se podría pensar que lo lógico habría sido que el hombre europeo
+hubiera desarrollado esta moral que brota de la vida y que funciona en
+armonía con ella.\\
+Lo que parece haber sucedido es que la moral europea se ha erigido y
+ha funcionado como instancia directamente opuesta de la vida. De ahí
+la duaidad de morales: Por un lado, una moral que es propia de la
+vida, que la realiza y la potencia —de los señores—, y otra que va
+contra la vida, que la niega y la intenta suplantar —la de los
+esclavos.\\
+
+El contraste y la lucha entre ellas sería irreductible y sin
+solución. Dos morales, una conforme a la vida porque brota de ella y
+otra opuesta y contraria a la vida porque no la acepta, la considera
+inmoral, se esfuerza en una lucha para que la vida se adapte y se
+ajuste a un ideal abstracto y metafísico que la corrija de su
+injusticia y su inmoralidad.\\
+
+El objeto principal de esta moral europea y occidental habría sido el
+de limitar a los individuos en sus acciones prohibiéndoles una serie
+de cosas y haciendo prevalecer reglas uniformadoras según un código de
+conducta universal qeu trata de determinar, no sólo las acciones
+concretas en su dimensión externa, sino inclusa también las
+intenciones íntimas y los motivos psicológicos de la acción. El
+*hombre moral* sería el que obedece escrupulosamente esas reglas
+absolutas.\\
+Se ha ignorado que todos los /tu debes/ son obra de hombres
+individuales. Se ha querido tener un Dios moral para sustraerse a la
+tarea que exige del hombre el creas. Detrás de la pensar
+cristiano-católico se esconden la debilidad o la pereza.\\
+
+Por el contrario, la actitud del *hombre libre* sería la de construir
+sus propios valores porque él no acepta ser exonerado de esta
+responsabilidad.\\
+Un ser humano fuerte, de elevada formación, que se contiene a sí
+mismo, que es bastante fuerte para esta libertad. El ser humano de la
+tolerancia, no por debilidad sino por fuerza, porque aquello en que
+perecería una naturaleza mediana, él sabe utilizarlo incluso para su
+provecho. El ser humano para el que no hay nada prohibido excepto la
+debilidad.\\
+
+La *dualidad de morales* mantendría la confrontación entre una moral
+dogmática —que busca y genera la gregarización como la mejor manera de
+gobernar al rebaño—, frente la hipótesis de una ética de la
+singularidad —dispuesta a aceptar el riesgo que se seguiría de admitir
+capacidadees de acción nuevas e innovadoras que hacen crecer y
+fortalecer a los individuos en lugar de disminuirlos.\\
+
+En esta *nueva moral*, la *virtud* sería a a fuerza como invención de
+uno mismo, en contraposición a la no-voluntad de los esclavos que
+obedecen al orden establecido en actitud propia de un rebaño.\\
+Esculpirse a sí mismo con un juicio de gusto sobre el estilo a dar al
+propio carácter. Ésta sería la ética que se funda en la experiencia de
+un autodomino por oposición a una moral de lo universal qeu atribuye a
+cada uno la capacidad de actual moralmente en función de una ley
+determinada.\\
+
+En suma, la moral occidental sería el resultado de la confrontación a
+lo largo de los siglos de estos dos tipos de moral, que expresan modos
+de evaluación opuestos. De la evolución en cada uno de ellos y su
+relación de constante lucha nace la forma relativamente estable de la
+actual *moral europea y occidental*. Habría en el trasfondo de esta
+moral una diferencia afectiva irreconciliable que está en la fuente de
+las respectivas tablas de valores de las dos morales de las que ha
+nacido esa diferencia reconducible a los dos modos de evaluación vital
+básicos de la voluntad de poder, como de poder activa y como voluntad
+de poder reactiva.
+
+* El Wagner imposible de nietzsche
+
+** La estética como política
+Nietzsche ve en las obras de Wagner plasmar la moral shopenhaueriana
+de la compasión y de la negación del querer vivir. Según N. esta
+dependencia de la filosofía pesimista de Schopenhauer fue la que
+condujo a W. al cristianismo.\\
+
+Pero también se detecta un resentimiento personal de N. hacia W.,
+probablemente relacionado con algún episodio personal.\\
+
+Nietzsche describe a W. como el /advenimiento del comediante en la/
+/música/. Esto representa el motivo esencial de una gran decepción
+respecto a las expectativas que la propuesto estético-cultural de
+W. había despertado en N. durante su juventud.\\
+
+Uno de los motivos de la relación de tensión entre ambos, fue la idea
+que heredó N. del romanticismo de que el arte, o ciertas formas de
+arte, podrían volver a cumplir en la época contemporánea la función
+educadora que consiguieron cumplir en la Grecia antigua.\\
+
+Wagner presentaba su música como materialización de esta pretensión
+del romanticismo: Quería hacer de su música el nuevo gran arte
+romántico como nueva religión estética para los tiempos modernos.\\
+Nietzsche creyó primero que el drama musical de W. podría cumplir este
+objetivo, pero pronto se dio cuenta que lo que la música de
+W. representaba era una desfiguración y una falsificación de ese
+hermoso ideal romántico de reactiva en nuestra época la fuerza
+ennoblecedora del arte griego.\\
+
+El proyecto wagneriano era convertir la ópera en un arte de masas
+mediante la técnica orquestral y teatral. Esto no era ajeno a una
+intención estético-política, como la que tuvo en la Antigüedad la
+tragedia griega.\\
+
+Se debía empezar para transformar el concepto mismo de ópera moderna,
+rompiendo con la visión de subordinación de la música a la poesía en
+la misma ópera. Wagner redefinió su ópera como la representación
+sensible de un contenido espiritual, en lugar de una dramatización de
+las pasiones. La poesía se resuelve en el mito, destinado a fundirse
+con la música en el drama musical.\\
+
+Wagner aceptaba la comprensión que los griega tenían del mito como
+materia ideal del poeta. Pero le dio su propio sesgo, afirmando que el
+mito es siempre el poema primitivo y anónimo de un pueblo, retomado
+por todas las épocas y poetas posteriores, al mostrar lo que la vida
+tiene de verdaderamente humano, de eternamente comprensible, y lo que
+muestra bajo esta forma concreta. Es decir, la mitología de las sagas
+germánicas era el poema anónimo de un pueblo concreto, el germánico,
+que podía presentarse como expresión de lo humano extensible y
+generalizable al resto de los demás pueblos.\\
+En este sentido, la poesía del futuro habría que ser el mito en cuanto
+creador de identidad colectiva y de comunidad. Y este mito es lo que
+había que transmitir en la música.\\
+
+Wagner decía que lo que aseguraba su drama musical el poder político
+de cohesionar la sociedad y superar la fragmentación y el aislamiento
+de los individuos —como la gran enfermedad de la época moderna— era su
+virtud figurativa, el poder de representar figuras de tal manera que
+produjeran un determinado tipo de efecto en los participantes.\\
+Pretendía representar en su óperas eran las grandes figuras míticas
+con las que el pueblo alemán reunido podría identificarse.\\
+Así pues son necesarias figuras míticas, extraídas del patrimonio
+mitológico de la tradición, para la organización de una
+comunidad. Pero la religión cristiana ya no crea la solidaridad de la
+comunidad, le correspondía al arte reencontrar su antiguo destino y
+erigir las figuras míticas en las que la humanidad pudiera reconocerse
+en su esencia constitutiva.\\
+
+
+Nietzsche le replica a Wagner de degradar y desfigurar el original
+proyecto romántico de una rehabilitación en el presente de la tragedia
+griega. La ópera de W. no podía ser el momento de una conexión
+artística dionisíaca construido sobre las leyendas y mitos germánicos,
+i.e. nacionalista. Con esto, Wagner contradecía el propósito del
+primer romanticismo, que proclamaba la idea de un arte conciliador
+para hacer posible acceder a un nivel de comunidad en la que se
+desvanecieran las divisiones entre los pueblos.\\
+A esto es a lo que se había adherido N. en su juventud.\\
+Pero Wagner perseguía el sueño de un gran arte alemán capaz de definir
+el ser alemán, y distinguirlo bien frente a lo extraño y espurio,
+representado por todo lo procedente del ámbito semita y latino.\\
+Wagner aprovechaba la unificación alemana llevado a cabo por Bismark
+para construir la nueva identidad alemana sobre un pueblo-sujeto.\\
+
+Nietzsche, con una comprensión cada vez más madura y original de la
+cultura griega se contrastaba cada vez más con las tesis del
+wagnerianismo. Lo propio de la cultura griega fue, para N., subrayar,
+en el fenómeno dionisíaco, no el movimiento de la disolución de lo
+apolíneo en lo dionisíaco, sino, de forma más positiva y afirmativa,
+el otro movimiento el que va de lo dionisíaco a lo apolíneo, el
+movimiento de la creatividad y de la formación de cultura a partir del
+caos de los impulsos informes y desmesurados.\\
+La superioridad de los griegos es esa actitud afirmativa de la visa
+que les llevó a dominar el pesimismo regresivo de la disolución
+dionisíaca del mundo mediante la creación de formas y leyes con las
+que poner en orden en el caos y hacer posible y deseable vivir.\\
+Desde esta perspectiva, el romanticismo de Wagner no podía aparecer
+como otra cosa que como una desvalorización nihilista de la cultura y
+de sus creaciones, una ansia enfermiza por disolverse en lo dionisíaco
+sentida esta disolución como liberación, pero que, desde la
+perspectiva de la cultura griega apolínea, no es más que la desmesura
+bárbara, pre- o anti-griega.\\
+
+Lo substancial de la decepción que N. sufrió respecto del proyecto
+estético de W. tenía qeu ver directamente con la dirección más propia
+de su pensamiento: la liberación que debe ser buscada a través del
+arte no es la experiencia dionisíaca del anonadamiento de la
+individualidad como regreso de nuestro yo al todo cósmico o
+social. Esto no es más que la huda del mundo, nihilismo, desprecio y
+negación de la vida. Lo tiene que hacer el hombre que ama y afirma la
+vida es conquistarse a cada instante dominando su caos, dando un
+sentido a su vida e imponiendo una ley, un orden, un ritmo a su
+temporalidad unificándola en una estructura articulada. Si no hace
+esto se verá aplastado por el caos de las impresiones y de las
+determinaciones cambiantes e imprevisibles que se mueven en todas las
+direcciones. Crear es ordenar el caos constitutivo de la existencia,
+darle una ley, un orden que va más allá del momento presente y
+organiza el futuro alrededor de una meta, dando sentido a nuestro
+futuro y pasado.\\
+La música afirmativa, la que favorece la vida ascendente y nos ayuda a
+superar el nihilismo no puede ser la que nos sumerge y diluye en lo
+dionisíaco aniquilador, que es lo que pretende la música de W., sino
+la que nos enseña el modo de escapar de él.\\
+
+** Drama muscial y metafísica idealista
+Para W. su objeto no era propiamente ala música, sino el drama,
+respecto del cual la música es sólo un medio, el medio para expresar y
+hacer sentir el mundo de la representación dramática.\\
+
+El sentido del drama es el de definir el proceso finito, temporalmente
+definible, a través del cual se produce efectivamente la posible
+síntesis entre música y sentimiento, entre lenguaje y mundo, entre
+lenguaje y realidad.\\
+
+Esto se basa en una mala interpretación de W. del pensamiento de
+Schopenhauer, quien este último decía que la música era la más elevada
+forma artística porque revela la esencia del mundo de manera
+inmediata. Wagner lo interpretó como posibilidad de una síntesis
+perfecta entre sentimiento y el sonido, entre el lenguaje y
+realidad. Pero para Schopenhauer, la voluntad del mundo es
+incognoscible como cosa en sí, lo que implica que las representaciones
+se comprendan como anonadantes, como aniquilantes.\\
+
+Así, el problema de W. no es el del reconocimiento de la
+insustancialidad y del vacío de toda apariencia, sino que al
+contrario, su problema es el de la creación del drama, para él la
+música tiene el valor de una forma representativo-expresiva capaz de
+realizarse en perfecta coherencia con un significado.\\
+Es decir, necesariamente W. tiene que dar por supuesto en la búsqueda
+de la síntesis que el significado se convierte en Idea, y que la
+representación de esa Idea reviste el carácter de un deber-ser. El
+valor del drama es el de la representación, y su lenguaje es un
+lenguaje que vale para describir el espíritu.\\
+
+
+Para Schopenhauer, aquello distinto en la música frente a las demás
+artes radica precisamente en su alejamiento de esta función de
+representar ideas. Esta liberación de la música de la obligación de
+representar fenómenos o ideas es la que le hace inservible desde el
+punto de vista utilitario. La música no sirve para comunicar ideas, no
+tiene valor para la vida práctica. No contribuye a alimentar el
+querer vivir de la voluntad del mundo. Más bien lo niega.\\
+
+Para resumir, en Schopenhauer, la música es negación del mundo como
+voluntad de vivir, simple forma artística que no aporta, que no
+capitaliza ningún significado.\\
+Wagner en cambio, lo que pretende es hacer del drama musical el
+lenguaje que vale para describir la realidad.\\
+Por esto, para Nietzsche, el proyecto de Wagner es un fracaso
+absoluto.\\
+
+En los tiempos en N. rompió con W. había logrado alcanzar sus dos
+posiciones filosóficas que iban a determinar su pensamiento de
+madurez. Por un lado, la comprensión de la cultura griega que había
+logrado desprenderse del romanticismo presente en las obras de su
+juventud. En contraste con e romanticismo y su impulso regresivo, la
+cultura griega se le aparecía como la búsqueda de la mesura y el
+triunfo afirmativo del dominio de la voluntad sobre el caos del
+mundo.\\
+Desde esta perspectiva, el romanticismo de W. no podría aparacérsele
+como otra cosa que como una lucha abierta contra la cultura sin más y
+contra sus creaciones.\\
+
+El segundo logro precipitó su conflicto con W., fue que empezaba a
+convencerse del carácter puramente convencional y retórico de todo
+lenguaje. Esto le movió a una crítica antimetafísica contra todas las
+tesis que defendían la necesidad del vínculo semántico entre lenguaje
+y ser, y plantear el valor del lenguaje únicamente en función de su
+eficacia para la vida.\\
+
+Por todo esto, la dialéctica wagneriana entre lenguaje musical y
+esencia del mundo chocaba fuertemente con sus proyectos e ideas. Si
+nada garantiza la identidad de música y mundo, la música de W., que
+pretende ser presentarse como símbolo metafísico de la esencia del
+ser, no es más que la falsedad e impostura. La música de W. no es más
+que búsqueda de consuelo, síntoma de debilidad, puro efectismo teatral
+e histérico, nihilismo, decadencia y negación de la vida.\\
+Si lo que hace posible la vida del hombre y la desarrolla es
+introducir la regularidad y la unidad en el caos, entonces lo que
+expresa la música de W. es la tendencia opuesta. Al querer reflejar
+musicalmente el fondo dionisíaco del mundo, esta música tiene una
+estructura análoga al estado originario de indeterminación previo al
+esfuerzo del hombre por identificar y determinar perceptivamente los
+objetos.\\
+
+NIetzsche modifica en su madurez el juicio de valor que sobre la
+música de W. tenía en su juventud. Lo que se muestra tras el fracaso
+de W. es que no existe ninguna esencia oculta en el significar de la
+música, ni la relación originaria entre signo y significado, ni
+lenguaje como representación metafísica de un sentimiento o de un
+mundo.\\
+Todo indicio de expresar más que sí misma, toda posible connotación
+metalingüística, todo afán de querer decir sus propios fundamentos
+metafísicos, subjetivos o utópicos, tiene que ser rechazado.\\
+Esta es la gran miseria y grandeza trágicas de la música absoluta. Que
+su escritura ya no es escritura de ninguna nueva síntesis, sino
+aceptación de una separación, de una desvinculación completa respecto
+de cualquier originario, como cualquier otra forma o fenómeno del
+mundo, pura apariencia.
+
+
+* El hombre nuevo
