page 265 2nd paragraph

--- a/Nietzsche/nietzsche_tardio.org
+++ b/Nietzsche/nietzsche_tardio.org
@@ -1256,3 +1256,136 @@ mundo, pura apariencia.
 
 
 * El hombre nuevo
+** La imagen de la gran salud
+La idea del Übermensch aparece en los escritos de 1882, poco antes de
+la composición del /Así habló Zaratustra/, en la que se convierte en
+un tema central.\\
+Para Nietzsche el Übermensch es una evolución del último hombre, pero
+no en sentido darwinista, sino desde una perspectiva de la vida como
+creatividad. La vida es voluntad de poder activa en cada centro de
+fuerza, de modo que el verdadero progreso en el sentido de la
+autosuperación sólo se cumple individualmente.\\
+
+De ahí que esté presente a lo largo de su obra la noción de la
+formación de fuertes personalidades individuales. Sostiene que las
+virtudes de los individuos sea aquello característico de él y no algo
+extraño, una piel, un manto, ya que es la verdad de fondo del alma.\\
+
+Primero genio, luego espíritu libre y, ahora, Übermensch, en el que se
+proyecta el valor de grandeza y el /pathos/ de la distancia que hace
+nacer, en el interior del alma una distancia aún mayor que la
+puramente social.\\
+El Übermensch es una figura hipotética, un modo alternativo de
+existencia más-allá o después del nihilismo.\\
+El anuncio del übermensch va unido a la predicación del eterno retorno
+porque, para aceptar la inmanencia total del mundo tras la muerte de
+Dios, el hombre necesita elevarse por encima de sí, tiene que
+desaparecer a din de que nazca el Übermensch. Sólo un ser más allá del
+hombre será capaz de afirmar la vida que retorna eternamente.\\
+
+Lo que distingue, en último término, al moderno europeo nihilista
+—como individuo enfermo y decadente— del Übermensch —como hipótesis de
+una existencia que ha superado ya esa enfermedad—, es que el
+übermensch es exponente del la *gran salud* del cuerpo. Es el hombre
+redento, el espíritu creador, de gran amor que su fuerza impulsiva
+mantiene alejado de cualquier más allá o más acá, cuya soledad el
+pueblo interpreta como si fuera una huida de la realidad, cundo no es
+sino un sumergirse, un engolfarse , un ahondar en la realidad, para
+traer la redención de dicha realidad, su redención respecto de la
+maldición que el ideal habido hasta ahora ha echado sobre ella.\\
+
+
+Nietzsche, también identifica la *gran salud* con las grandes obras
+del arte clásico. La mesura de las formas apolíneas propias del gran
+estilo no es jamás la negación de la sensibilidad, sino la victoria de
+un poder que conserva la vitalidad de los sentidos y sabe producir con
+ella bellas armonías, formas, ritmos, etc. Este modo de crear es el
+contrapunto crítico del ascetismo platónico-cristiano-schopenhaueriano
+del hombre decadente y, por ello, adopta la imagen de un modo de ser
+en la que la voluptuosidad y la sensualidad no se reprimen, sino que
+se dominan y se presentan de una forma sublimada, exaltada.\\
+
+Lo que diferencia el Übermensch del individuo decadente y nihilista es
+que, en ves de eliminar los sensible, las pasiones, lo instintivo,
+etc., apuesta por un reforzamiento y mutuo potenciamiento de la unidad
+indisoluble en él de lo sensible y lo inteligible, de lo natural y lo
+cultural. Ese es el Übermensh como hombre renaturalizado, que ha
+vuelto a encarnar en sí mismo ese texto primordial del *homonatura*.\\
+
+Sostiene N. que pensar el ser humano fuera ya de las ideas metafísicas
+significa pensarlo como una unidad natural en vez de como una dualidad
+cuerpo-alma, materia-espíritu o razón-sensibilidad. El espíritu, el
+alma, la razón, el yo, la conciencia, no son cosas separadas del
+cuerpo, sino aspectos del ser humano concebido como un todo organizado
+de la misma naturaleza de la que está constituido del universo.\\
+Esta idea reformula y transforma en un sentido original, el
+pensamiento de Schopenhauer de que la vida, en cuanto voluntad
+inconsciente y sin finalidad, tiene en la conciencia y en el mundo de
+la repreentación su expresión más superficial.  De modo que la
+conciencia o el espíritu, no sólo no están separados del cuerpo y de
+los impulsos inconscientes como si formasen dos mundos distintos, como
+ha sostenido el dualismo metafísico, sino que son la manifestación de
+fuerzas cuya lógica y cuyo funcionamiento pertenecen a una especie de
+razón-superior que es la que gobierna al cuerpo, a la que N. llama,
+para distinguirlo del yo-consciente, el-sí-mismo.\\
+
+Los impulsos o instintos son condiciones básicas de la dinámica de los
+seres vivo orgánicos, respecto de los cuales la consciencia no es más
+que una estructura secundaria, un subproducto que no deja de depender
+nunca de esas otras fuerzas instintivas qeu son las qeu realmente
+deciden.\\
+
+A partir de estas premisas, N. extrae una importante conclusión. Lo
+que ha caracterizado a la cultura europea y occidental, y en concreto
+a su moral, es que se ha interferido entre la vida y el instinto
+interponiendo entre ellos unos ideales que niegan la vida. Por eso
+propone una transvaloración o inversión moral —propio del übermensch—,
+como hipótesis de una situación, no de la negación y el desprecio de
+la vida, sino de su afirmación, de su aceptación u de su aprobación.\\
+
+Afirmar la vida es mandarse a sí mismo, encontrar en uno su propia ley
+y no tener más ley que la necesidad de autosuperación interna a la
+propia voluntad de poder. \\
+Lo que significaría la muerte de Dios y el advenimiento del nihilismo
+es que no hay ya ningún valor absoluto que pueda seguir imponiéndose a
+la voluntad individual, ni apelando a lo trascendente ni tampoco a lo
+trascendental (Kant). La libertad que simboliza el Übermensch no es
+autonomía de la moral trascendental en una sociedad normativizada de
+individuos libres, sino el ejercicio de la voluntad fuerte y
+afirmativa que encuentro sólo en sí misma su motivación y su ley.\\
+
+Nietzsche opone pues, a la cristiana y kantiana moral como
+contranaturaleza la idea de una *ética de la singularidad* que gira en
+trono al concepto de *construcción de sí mismo* y de gusto por la
+escelencia y la distinción.\\
+Las virtudes de esta ética están hechas para soportar la afirmación
+dichosa del carácter cambiante y perspectivista de la vida. No son
+virtudes en razón de su mayor universalidad o verdad, sino porque
+valen para preservar al individuo en sus máximas del amor inteligente
+a uno mismo y a los demás por sobreabundancia y riqueza internas.\\
+
+Esta ética de la singularidad parte de una apuesta por el carácter
+estética de los valores morales y por la naturaleza artística de la
+acción moral. Reducción moral a la estética.\\
+
+El valor no remita a la representación de juicios estables sobre lo
+bueno y lo malo, sino a creencias que hemos incorporado
+individualmente en el curso de una práctica de aprendizaje y de
+socialización.\\
+
+Los valores no son bienes ideales absolutos suprasensibles que la
+razón capta e impone frente a los instintos. Son las pulsiones
+actuando valorativa y procesualmente. En este proceso, juegan un papel
+importante los afectos o sentimientos. Las valoraciones tiene su
+fuente inmediata en los afectos o sentimientos, y éstos, a su vez,
+brotan de los impulsos infraconscientes que constituyen el sistema
+pulsionas de cada individuo.\\
+Los sentimientos tienen un importante papel mediador, la pulsión o el
+instinto se insinúa siempre como el sentimiento de algo bueno o de
+algo malo. Todo instinto, pues, es la traducción de preferencias al
+nivel más elemental entre lo beneficioso y lo perjudicial, entre lo
+agradable y lo desagradable. La relación entre la pulsión y los
+valores empueza con un sentimiento de esto-me-gusta o
+esto-no-me-gusta, prefiero-esto o me-repugna-aquello, de modo que el
+ejercicio de la valoración va siempre acompañado de sentimientos que
+son su inmediata dimensión motriz.
